cargo-features = ["profile-rustflags"]

[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
rayon = "1.5"
image = "0.24"

[features]
default = ["double"]
double = []
single = []

[profile.release]
opt-level = 3
lto = "thin"
strip = true
panic = "abort"
rustflags = ["-Ctarget-cpu=native"]

