[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"
authors = ["Flippette <quangdatle2006@outlook.com>"]

[dependencies]
rayon = "1.5"
image = { version = "0.24", default-features = false, features = ["png"] }

[features]
default = ["double"]
double = []
single = []

[profile.release]
opt-level = 3
lto = "thin"
strip = true
panic = "abort"

