[package]
name = "mandelbrot"
version = "0.1.0"
edition = "2021"
authors = ["Flippette <quangdatle2006@outlook.com>"]

[dependencies]
rayon = "1.5"
image = { version = "0.24", default-features = false, features = ["jpeg_rayon"] }
clap = { version = "4.0.29", features = ["derive"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
